--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: RandomTeleporter
+name: RandomTeleport
 version: 1.01
-main: com.webs.kiroscorner.rtp.RTPMain
+main: com.chosencraft.www.rtp.RandomTeleportMain
 author: Kiro47
 description: Simply used for randomly teleporting about the world.
 
