--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"
+    compileOnly group: 'net.milkbowl.vault', name: 'VaultAPI', version:'1.6'
+
 }
