--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,7 +19,7 @@ price: 20.0
 askBeforeTeleporting: true
   ### Sets the hard border limit of how far Teleportation will go.
 MaximumXRadius: 7000
-MaximumXZadius: 7000
+MaximumZRadius: 7000
   ### If True will only teleport to pre set places.
 HardSetTeleports: false
   ### Cooldown and Its Timer to reset.
